Fix folder icon & fix invisible radio buttons

--- a/jv-respawn-refined.css
+++ b/jv-respawn-refined.css
@@ -66,7 +66,7 @@ body.didomi-popup-open {
   display: none;
 }
 .icon-topic-folder::before {
-  content: "";
+  content: "";
 }
 .layout__videoFooter {
   display: none;
