--- a/jv-respawn-refined.user.css
+++ b/jv-respawn-refined.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           JV Respawn Refined
 @namespace      deboucledjvcom
-@version        1.4.1
+@version        1.4.2
 @description    JV Respawn Refined
 @author         Rand0max
 ==/UserStyle== */
@@ -73,7 +73,7 @@
     display: none;
   }
   .icon-topic-folder::before {
-    content: "";
+    content: "";
   }
   .layout__videoFooter {
     display: none;
